--- a/package.json
+++ b/package.json
@@ -1,36 +1,35 @@
 {
   "name": "hotseat",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
+  "license": "MIT",
+  "author": "Carolyn",
+  "description": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start-dev": "npm run start-server & npm run build-watch",
-    "start": "npm run build-w",
-    "build-watch": "webpack -w"
+    "start": "npm run start-server & npm run build-watch",
+    "build-watch": "webpack -w",
+    "start-server": "nodemon server/app.js",
+    "seed": "node seed.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/carajean/HotSeat.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/carajean/HotSeat/issues"
-  },
-  "homepage": "https://github.com/carajean/HotSeat#readme",
   "dependencies": {
-    "express": "^4.16.4",
+    "axios": "^0.17.1",
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
     "morgan": "^1.9.1",
-    "pg": "^7.6.1",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "sequelize": "^4.41.2"
+    "pg": "^7.4.0",
+    "pg-hstore": "^2.3.2",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "sequelize": "^4.28.6"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.4",
-    "nodemon": "^1.18.6",
-    "webpack": "^4.25.1"
+    "babel-loader": "^7.1.2",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "webpack": "^3.9.1",
+    "webpack-dev-server": "^2.9.5"
   }
 }
